--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <!--<img src="img/dubbelop-logo.png">-->
-    <header class="header">
-        header text
+    <header>
+        <div class="logo"><img src="img/dubbelop-logo.png"></div>
+        <p>Dubbeloproute</p>
     </header>
 </body>
 </html>
