--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
 <body>
     <!--<img src="img/dubbelop-logo.png">-->
     <header>
+        <h1 class="dubbeloproute-titel">Dubbeloproute</h1>
         <div class="logo"><img src="img/dubbelop-logo.png"></div>
-        <p>Dubbeloproute</p>
     </header>
+
+    <div class="content"></div>
 </body>
+<script src="js/global.js"></script>
 </html>
