--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
     <!--<img src="img/dubbelop-logo.png">-->
     <header>
         <h1 class="dubbeloproute-titel">Dubbeloproute</h1>
+        <button class="contactKnop"> Neem Contact Op </button>
         <div class="logo"><img src="img/dubbelop-logo.png"></div>
     </header>
 
-    <div class="content"></div>
+    <div class="content-slider"></div>
 </body>
 <script src="js/global.js"></script>
 </html>
