--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1 class="dubbeloproute-titel">Dubbeloproute</h1>
         <button class="contactKnop"> Neem Contact Op </button>
-        <div class="logo"><img src="img/dubbelop-logo.png"></div>
+        <div class="logo"><img src="src/img/dubbelop-logo.png"></div>
     </header>
 
     <div class="content-slider"></div>
