--- a/index.html
+++ b/index.html
@@ -15,9 +15,36 @@
         <div class="logo"><img src="src/img/dubbelop-logo.png"></div>
     </header>
 
-    <div class="content-slider"></div>
+<div class="content-slider">
+    <div class="slider-card">
+        <h3>text</h3>
+        <p>text</p>
+    </div>
 
-    <div id="map"></div>
+    <div class="slider-card">
+        <h3>text</h3>
+        <p>text</p>
+    </div>
+
+    <div class="slider-card">
+        <h3>text</h3>
+        <p>text</p>
+    </div>
+
+    <div class="slider-card">
+        <h3>text</h3>
+        <p>text</p>
+    </div>
+
+    <div class="slider-card">
+        <h3>text</h3>
+        <p>text</p>
+    </div>
+</div>
+
+    <div id="map">
+
+    </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/map.js"></script>
