fotos in markers functioneel

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <div class="content-slider"></div>
 
+  <div class="map-container">
     <div id="map"></div>
+  </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/map.js"></script>
