--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <title>Dubbeloproute</title>
 </head>
+<div></div>
 <body>
     <header>
         <h1 class="dubbeloproute-titel">Dubbeloproute</h1>
