--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <title>Dubbeloproute</title>
 </head>
-<div></div>
 <body>
     <header>
         <h1 class="dubbeloproute-titel">Dubbeloproute</h1>
@@ -20,7 +19,7 @@
             <button class="slider-arrow prev">❮</button>
             <div class="slider-track">
                 <div class="slider-card active">
-                    <div class="card-image" style="background-image: url('')">
+                    <div class="card-image" style="background-image: url('src/img/18c-glas-in-lood.webp')">
                         <div class="date-badge">18-11-25, 8:00</div>
                     </div>
                     <div class="card-content">
