--- a/src/Contact.html
+++ b/src/Contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Contact</title>
+    <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
     <h1>Stuur een email</h1>
