--- a/ed-vite/src/Contact.html
+++ b/ed-vite/src/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Contact</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
     <header>
@@ -12,9 +12,6 @@
       <button class="contactKnop">Neem Contact Op</button>
       <div class="logo">
         <img src="src/img/dubbelop-logo.png" alt="Dubbelop Logo" />
-      </div>
-      <div class="logo">
-        <img src="src/assets/img/dubbelop-logo.png" alt="Dubbelop Logo" />
       </div>
     </header>
     <h1>Stuur een email</h1>
