--- a/ed-vite/index.html
+++ b/ed-vite/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Montserrat:wght@400;600;800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/src/assets/css/styles.css" />
+  <!-- Global CSS is imported inside the app (see src/main.ts). Remove direct link to source file to avoid MIME errors during dev. -->
   <link rel="icon" href="/favicon.ico?v=2" />
   <link rel="shortcut icon" href="/favicon.ico?v=2" />
   <title>Dubbeloproute</title>
